force-app/main/default/objects/Survey__c/Survey__c.object-meta.xml
<CustomObject>
    <label>Survey</label>
    <pluralLabel>Surveys</pluralLabel>
    <nameField>
        <label>Survey Name</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
    <description>Survey form definitions for visit surveys, outlet audits, customer feedback and market intelligence (MOD-04 Outlet Visit Execution)</description>
</CustomObject>