force-app/main/default/objects/Survey__c/fields/Outlet_Type__c.field-meta.xml
<CustomField>
    <fullName>Outlet_Type__c</fullName>
    <label>Outlet Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Grocery</fullName>
            </value>
            <value>
                <fullName>Medical</fullName>
            </value>
            <value>
                <fullName>Hardware</fullName>
            </value>
            <value>
                <fullName>General Store</fullName>
            </value>
            <value>
                <fullName>Cosmetics</fullName>
            </value>
            <value>
                <fullName>Pan Shop</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>