force-app/main/default/objects/Survey__c/fields/Survey_Type__c.field-meta.xml
<CustomField>
    <fullName>Survey_Type__c</fullName>
    <label>Survey Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Visit Survey</fullName>
            </value>
            <value>
                <fullName>Outlet Audit</fullName>
            </value>
            <value>
                <fullName>Customer Feedback</fullName>
            </value>
            <value>
                <fullName>Market Intelligence</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>