force-app/main/default/objects/Survey__c/listViews/Active_Surveys.listView-meta.xml
<ListView>
    <fullName>Active_Surveys</fullName>
    <columns>NAME</columns>
    <columns>Survey_Code__c</columns>
    <columns>Survey_Type__c</columns>
    <columns>Outlet_Type__c</columns>
    <columns>Effective_From__c</columns>
    <columns>Effective_To__c</columns>
    <columns>Is_Mandatory__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Is_Active__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Active Surveys</label>
</ListView>