force-app/main/default/objects/Survey__c/listViews/All_Surveys.listView-meta.xml
<ListView>
    <fullName>All_Surveys</fullName>
    <columns>NAME</columns>
    <columns>Survey_Code__c</columns>
    <columns>Survey_Type__c</columns>
    <columns>Outlet_Type__c</columns>
    <columns>Effective_From__c</columns>
    <columns>Effective_To__c</columns>
    <columns>Is_Active__c</columns>
    <columns>Is_Mandatory__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Surveys</label>
</ListView>